# strale

./: Cargo.toml  README.md
assets/shaders/: triangle.frag  triangle.frag.spv  triangle.vert
crates/lib/strale/: Cargo.toml
crates/lib/strale/src/renderer/: backend.rs  bindless_descriptor_set.rs  device.rs  mod.rs  renderer.rs  swapchain.rs  utils.rs  vertex.rs
crates/lib/strale/src/renderer/renderers/: mod.rs  pipeline.rs  test.glsl  triangle.rs  triangles.rs
crates/lib/strale/src/renderer/vulkan/: backend.rs  buffer.rs  device.rs  image.rs  instance.rs  mod.rs  physical_device.rs  surface.rs  swapchain.rs
src/: main.rs  ray.rs
