[package]
name = "strale"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
bytemuck = "1.12.1"
ash = "0.37"
winit = "0.27"
log = "0.4"
gpu-allocator = "0.20.0"
ash-window = "0.12.0"
raw-window-handle = "0.5.0"
vk-sync = { git = "https://github.com/CrystaLamb/vk-sync-rs", branch = "update" }
env_logger = "0.9.3"
